--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="images/logo.png" class="logo">
+                <img src="images/logo-2.jpg" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -23,8 +23,8 @@
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
             </nav>
             <div class="header-text">
-                <p>UI/UX Designer</p>
-                <h1>Hi, I'm <span>Kevin</span><br>    from America</h1>
+                <p>Full Stack Developer</p>
+                <h1>Hi, I'm <span>Akhil</span><br>    from New York</h1>
             </div>
 
         </div>
@@ -34,11 +34,14 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/user.png" >
+                    <img src="images/About_Akhil.jpg" >
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
-                    <p>Hey, How are you my friend</p>
+                    <p>Full Stack Developer pursuing a Master’s degree at Wilmington University. 
+                        Skilled in Java, Spring Boot, React.js, and MySQL, with hands-on experience 
+                        in developing and deploying web applications. Passionate about continuous 
+                        learning and delivering high-quality solutions.</p>
                     <div class="tab-titles">
                         <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
                         <p class="tab-links" onclick="opentab('experience')">Experience</p>
@@ -46,9 +49,10 @@
                     </div>
                     <div class="tab-contents active-tab" id="skills">
                         <ul>
-                            <li><span>UI/UX</span><br>Designing Web/App Interfaces</li>
-                            <li><span>Web Development</span><br>Web App Development</li>
-                            <li><span>App Development</span><br>Building Android/iOS apps</li>
+                            <li><br>Java <span>|</span> JavaScript <span>|</span> HTML <span>|</span> CSS <span>|</span> React JS <span>|</span> Spring <span>|</span> Spring Boot <span>|</span> Spring Data JPA </li>
+                            <li>Spring REST <span>|</span> Spring AOP <span>|</span> Spring Security <span>|</span> Hibernate <span>|</span> MySQL <span>|</span> PostgreSQL <span>|</span> Git <span>|</span> Docker </li>
+                            <li>JUnit <span>|</span> Microservices <span>|</span> AWS(ECS, EC2, RDS, Beanstalk, Route 53) <span>|</span> Maven <span>|</span> RESTful APIs  </li>
+                            <li>Servlets <span>|</span> Eclipse <span>|</span> Agile Visual Studio <span>|</span> English, Hindi, Telugu </li>
                         </ul>
                     </div>
                     <div class="tab-contents" id="experience">
@@ -61,7 +65,6 @@
                         <ul>
                             <li><span>2024</span><br>Master's from Wilmington University</li>
                             <li><span>2022</span><br>Bachlor's from CMR University</li>
-                            <li><span>2018</span><br>Intermediate from Narayana College</li>
                         </ul>
                     </div>
                 </div>
@@ -69,7 +72,7 @@
         </div>
     </div>
    <!----------------services--------------->
-   <div id="services">
+   <!-- <div id="services">
     <div class="container">
         <h1 class="sub-title">My Services</h1>
         <div class="services-list">
@@ -93,38 +96,38 @@
             </div>
         </div>
     </div>
-   </div>
+   </div> -->
    <!-- ------------portfolio------------- -->
 <div id="portfolio">
     <div class="container">
         <h1 class="sub-title">My Work</h1>
         <div class="work-list">
             <div class="work">
-                <img src="images/work-1.png">
+                <img src="images/work-1.v2 image.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>This app works like instagram and connects people</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Quiz Application</h3>
+                    <p>Interactive quizzes to challenge your knowledge.</p>
+                    <a href="https://drive.google.com/file/d/1sb0XpxsJ3c8MmUKXmpnDS95nhhvszLWY/view?usp=drive_link"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-2.png">
+                <img src="images/work-2.v2 image.png">
                 <div class="layer">
-                    <h3>Music App</h3>
-                    <p>This app works like instagram and connects people</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>Student Management Application </h3>
+                    <p>Efficiently manage student records and activities.</p>
+                    <a href="https://drive.google.com/file/d/1BpQidCZw-5bAJnTlqeALQzjDgGEcNGZF/view?usp=drive_link"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
-                <img src="images/work-3.png">
+                <img src="images/work-3.v2_image-removebg-preview.png">
                 <div class="layer">
-                    <h3>Online Shopping App</h3>
-                    <p>This app works like instagram and connects people</p>
-                    <a href="#"><i class="fa-solid fa-up-right-from-square"></i></a>
+                    <h3>CRM Application</h3>
+                    <p>Manage customer relationships seamlessly.</p>
+                    <a href="https://drive.google.com/file/d/19WBom-wwSMVPcyacy1fmQWjldgQLXJxL/view?usp=drive_link"><i class="fa-solid fa-up-right-from-square"></i></a>
                 </div>
             </div>
         </div>
-        <a href="#" class="btn">See more</a>
+        <a href="https://github.com/sethuakhil5589" class="btn">See more</a>
     </div>
 </div>
 <!-- -------------------contact---------------------- -->
